# pyforestry

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  codecov.yml  coverage.xml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yml  search.html  searchindex.js  setup.py
.github/workflows/: bump-version.yml  ci.yml  enforce-pr-base.yml
Biomass/: Marklund1988.py  Petersson_Stahl_2006.py
Geo/: Geo.py  __init__.py
Geo/Climate/: Klimat.dbf
Geo/Counties/: RT_Dlanskod.sbn
Geo/Humidity/: __init__.py  humidity.dbf
Growth/: Pettersson_1992.py
Helpers/: __init__.py  getGenusType.py
Munin/: MANIFEST.in  __init__.py  setup.py
Munin.egg-info/: top_level.txt
Munin/Biomass/: Marklund1988.py
Munin/Geo/: Geo.py  __init__.py
Munin/Helpers/: Base.py  __init__.py  getGenusType.py
Munin/PriceList/: PriceList.py  PriceMatrix.py
Munin/Site/: SiteBase.py  SwedishSite.py  __init__.py
Munin/Taper/: EdgrenNylinder1949.py  Taper.py  __init__.py
Munin/Timber/: SweTimber.py  Timber.py  TimberVolumeIntegrator.py  __init__.py
Munin/TimberBucking/: Nasberg_1985.py  __init__.py
Munin/TimberPriceList/: PriceList.py  __init__.py
Munin/Volume/: Andersson_1954.py  Brandel1990.py  Matern_1975.py  Naslund1947.py  Timber.py  __init__.py
SiteIndex/FaktaSkog14/: Johansson_1999.py
SiteIndex/Hagglund/: Hagglund_1974.py
SiteIndex/sweden/: Johansson_2013.py  __init__.py
Volume/: Brandel1990.py
Volume/Brandel1990/: Brandel1990.py
Volume/Naslund/: Naslund1947.py
_modules/: index.html
_sources/api/: Munin.Geo.Climate.rst.txt  Munin.Geo.Counties.rst.txt  Munin.Geo.rst.txt  Munin.Models.rst.txt  Munin.SiteIndex.sweden.SIS.rst.txt  Munin.SiteIndex.sweden.Translate.rst.txt  Munin.Timber.rst.txt  Munin.TimberBucking.rst.txt  Munin.rst.txt  biomass.rst.txt  geo.rst.txt  helpers.rst.txt  misc.rst.txt  models.rst.txt  pyforestry.base.helpers.primitives.rst.txt  pyforestry.base.helpers.rst.txt  pyforestry.base.timber_bucking.rst.txt  pyforestry.sweden.biomass.rst.txt  pyforestry.sweden.geo.rst.txt  pyforestry.sweden.helpers.rst.txt  pyforestry.sweden.rst.txt  pyforestry.sweden.site.rst.txt  pyforestry.sweden.siteindex.sis.rst.txt  pyforestry.sweden.volume.rst.txt  volume.rst.txt
_sources/notebooks/: marklund_swetimber_demo.ipynb.txt  timber_bucking_demo.ipynb.txt  tree_species_intro.ipynb.txt
_sources/source/: modules.rst.txt  munin.biomass.sweden.rst.txt  munin.geo.coastline.rst.txt  munin.geo.humidity.rst.txt  munin.geo.temperature.rst.txt  munin.pricelist.rst.txt  munin.site.rst.txt  munin.siteindex.rst.txt  munin.siteindex.sweden.Translate.rst.txt  munin.siteindex.sweden.rst.txt  munin.taper.sweden.rst.txt  munin.timber.rst.txt  munin.timber.timber_base.rst.txt  munin.volume.sweden.rst.txt  pyforestry.geo.humidity.rst.txt  pyforestry.helpers.primitives.rst.txt  pyforestry.models.rst.txt  pyforestry.pricelist.rst.txt  pyforestry.volume.sweden.rst.txt
api/: Munin.Biomass.html  Munin.Biomass.sweden.html  Munin.Geo.Climate.html  Munin.Geo.Coastline.html  Munin.Geo.Counties.html  Munin.Geo.Humidity.html  Munin.Geo.Temperature.html  Munin.Geo.html  Munin.Helpers.html  Munin.Models.html  Munin.Models.sweden.html  Munin.PriceList.html  Munin.Site.html  Munin.Site.sweden.html  Munin.SiteIndex.html  Munin.SiteIndex.sweden.SIS.html  Munin.SiteIndex.sweden.Translate.html  Munin.SiteIndex.sweden.html  Munin.Taper.html  Munin.Taper.sweden.html  Munin.Timber.html  Munin.TimberBucking.html  Munin.Volume.html  Munin.Volume.sweden.html  Munin.html  bark.html  biomass.html  geo.html  helpers.html  misc.html  models.html  modules.html  pricelist.html  pyforestry.base.helpers.html  pyforestry.base.helpers.primitives.html  pyforestry.base.html  pyforestry.base.pricelist.data.html  pyforestry.base.pricelist.html  pyforestry.base.taper.html  pyforestry.base.timber.html  (+28 more)
dev/: .buildinfo  genindex.html  helpers_overview.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/api/: modules.html  pyforestry.base.helpers.html  pyforestry.base.helpers.primitives.html  (+29 more)
docs/: Makefile  conf.py  index.rst  requirements.txt  versions.json
notebooks/: marklund_swetimber_demo.html  marklund_swetimber_demo.ipynb  stand_site_enum_demo.html  stand_site_enum_demo.ipynb  timber_bucking_demo.html  timber_bucking_demo.ipynb  tree_species_intro.html  tree_species_intro.ipynb
scripts/: check_changed_file_coverage.py  check_new_file_coverage.py
source/: modules.html  munin.bark.html  munin.bark.sweden.html  munin.biomass.html  munin.biomass.sweden.html  munin.geo.climate.html  munin.geo.coastline.html  munin.geo.counties.html  munin.geo.html  munin.geo.humidity.html  munin.geo.temperature.html  munin.helpers.Primitives.html  munin.helpers.html  munin.html  munin.misc.html  munin.misc.sweden.html  munin.models.html  munin.models.sweden.html  munin.pricelist.data.html  munin.pricelist.html  munin.site.html  munin.site.sweden.html  munin.siteindex.html  munin.siteindex.sweden.Translate.html  munin.siteindex.sweden.html  munin.siteindex.sweden.sis.html  munin.taper.html  munin.taper.sweden.html  munin.timber.html  munin.timber.timber_base.html  munin.timber_bucking.html  munin.volume.html  munin.volume.sweden.html  pyforestry.bark.html  pyforestry.bark.sweden.html  pyforestry.biomass.html  pyforestry.biomass.sweden.html  pyforestry.geo.climate.html  pyforestry.geo.coastline.html  pyforestry.geo.counties.html  (+25 more)
src/: scrap.ipynb
stable/: .buildinfo  genindex.html  helpers_overview.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: test_Elfving_2003_age.py  test_Hagglund_1970.py  test_Hagglund_1970_2.py  test_Kuehne_2022.py  test_Sharma_2011.py  test_SweTimber_Bucking.py  test_Tveite_1976.py  test_base.py  test_geo.py  test_pricelist.py  test_solutioncube.py  test_species.py  test_stand_plot.py  test_swe_timber_bucking.py  test_taper.py  test_timber.py  test_volume.py  test_volumeUnit.py
(+941 files in other folders)
