[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "munin"
version         = "0.3"
description     = "Forest‑model toolkit"
readme          = "README.md"
requires-python = ">=3.10"
authors         = [{name = "Carl Vigren", email = "carl.vigren@slu.se"}]
license         = {text = "MIT"}
urls            = {Homepage = "https://github.com/Silviculturalist/munin"}
dependencies    = [
  "numpy",
  "tqdm",
  "xarray",
  "scipy>=1.5",
  "matplotlib",
  "geopandas",
  "shapely",
  "pyproj"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",          # ← measure coverage
  "coverage",            # ← coverage engine
  "black",
  "ruff",
  "build",
  "twine",
  "sphinx",              # ← docs tool
  "furo",                # ← a popular Sphinx theme
  "myst-parser",         # ← if you want Markdown support
]

# ----- setuptools‑specific bits -----
[tool.setuptools]
package-dir = {"" = "src"}   # tell setuptools where the code now lives

[tool.setuptools.packages.find]
where = ["src"]              # automatic discovery under src/

# ship **all** shapefile components
[tool.setuptools.package-data]
"munin.Geo.Humidity"  = ["humidity.*"]
"munin.Geo.Climate"   = ["Klimat.*"]
"munin.Geo.Coastline" = ["SwedishCoastLine_NE_medium_clipped.*"]
"munin.Geo.Counties"  = ["RT_Dlanskod.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [ #Ignore warning from pyogrio
  "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning:pyogrio"
]
addopts = [
  "--import-mode=importlib",
  "--cov=munin",                # measure your package
  "--cov-report=term-missing",  # show missing lines in console
  "--cov-report=html"           # generate htmlcov/
]
